@@ -651,6 +651,8 @@ void shuffle_attack(object *op, int change_face);
 void spell_failure(object *op, int failure, int power, object *skill);
 int cast_spell(object *op, object *caster, int dir, object *spell_ob, char *stringarg);
 void move_spell_effect(object *op);
+void store_spell_expiry(object* spell);
+void check_spell_expiry(object* spell);
 /* swap.c */
 void read_map_log(void);
 mapstruct* swap_map(mapstruct *map);
